# cfdyndns

./: .envrc  .gitignore  Cargo.nix  Cargo.toml  Dockerfile  Makefile  README.md  TODO.md  crate-hashes.json  flake.nix  rust-toolchain.toml  rustfmt.toml  treefmt.toml
.github/: _ci.yml
.github/workflows/: ci.yml
nix/repo/: rust.nix  shells.nix
src/: api.rs  clone.rs  dns.rs  fns.rs  ip.rs  main.rs
systemd/: cloudflare-dyndns.config.example
