[package]
name = "cfdyndns"
version = "0.0.3"
authors = ["Cole Mickens <cole.mickens@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4.8"
pretty_env_logger = "0.4.0"
serde_json = "1.0.48"
public-ip = "^0.2"
tokio = { version = "^1", features = ["rt-multi-thread", "macros"] }
cloudflare = "^0.10"
anyhow = "^1"

[patch.crates-io]
cloudflare = { git = "https://github.com/jcgruenhage/cloudflare-rs.git", branch = "make-owner-fields-optional" }
public-ip = { git = "https://github.com/jcgruenhage/rust-public-ip.git", branch = "cloudflare-provider" }