[package]
name = "cfdyndns"
version = "0.1.1"
authors = ["Cole Mickens <cole.mickens@gmail.com>", "Tim DeHerrera <tim@nrdxp.dev>"]
edition = "2021"

[dependencies]
log = "0.4.8"
pretty_env_logger = "0.5.0"
serde_json = "1.0.107"
public-ip = "^0.2"
tokio = { version = "^1", features = ["rt-multi-thread", "macros"] }
cloudflare = "^0.10"
anyhow = "^1"
clap-verbosity-flag = "^2.0"

[dependencies.clap]
version = "^4.4"
features = ["wrap_help", "derive", "env"]

[patch.crates-io]
cloudflare = { git = "https://github.com/jcgruenhage/cloudflare-rs.git", branch = "make-owner-fields-optional" }
public-ip = { git = "https://github.com/jcgruenhage/rust-public-ip.git", branch = "cloudflare-provider" }